--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Rubik:wght@400;600&display=swap");
+er@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Rubik:wght@400;600&display=swap");
 
 * {
     margin: 0;
@@ -80,6 +80,10 @@ header {
     max-height: 100%;
     max-width: 20%;
     padding: 4% 5%;
+}
+header h1{
+    font-size: 30px;
+    padding-left: 0px;
 }
 
 header h5 {
