--- a/style.css
+++ b/style.css
@@ -82,13 +82,14 @@ header {
     padding: 4% 5%;
 }
 header h1{
-    font-size: 30px;
+    font-size: 40px;
     padding-left: 0px;
 }
 
 header h5 {
     font-size: 23px;
     margin-top: 20px;
+    padding-left: 100px;
 }
 
 .section {
